--- a/src/classes/ScheduledEmailTest.cls
+++ b/src/classes/ScheduledEmailTest.cls
@@ -1,7 +1,7 @@
 @isTest
 private class ScheduledEmailTest {
 	@isTest 
-    private static void scheduleTest() {
+    private static void executeScheduleTest() {
         Test.StartTest();
 		ScheduledEmail se = new ScheduledEmail();
 		String sch = '0 0 23 * * ?';
