--- a/src/classes/WebServiceConnection.cls
+++ b/src/classes/WebServiceConnection.cls
@@ -2,19 +2,20 @@ public class WebServiceConnection {
     @future(callout=true)
     public static void sendData(String json) {
                
-        try {                   
-            Org2Data__c customData = Org2Data__c.getOrgDefaults();
-            String token = getToken(customData);
-            String operateUrl = customData.operateUrl__c;            
-            Httprequest request = new HttpRequest();  
-            request.setEndpoint(operateUrl);  
-            request.setMethod('POST');    
-            request.setHeader('Content-Type','application/json');
-            request.setHeader('Authorization','Bearer '+ token);   
-            request.setBody(json);            
+
+        Org2Data__c customData = Org2Data__c.getOrgDefaults();
+        String token = getToken(customData);
+        String operateUrl = customData.operateUrl__c;
+        HttpRequest request = new HttpRequest();
+        request.setEndpoint(operateUrl);
+        request.setMethod('POST');
+        request.setHeader('Content-Type','application/json');
+        request.setHeader('Authorization','Bearer '+ token);
+        request.setBody(json);
+        try {
             HttpResponse response = new Http().send(request);            
         } catch (Exception e) {
-            System.debug(e.getMessage());
+            //ErrorLog error = new ErrorLog(Name = e.getMessage());
         }
     }    
     
