--- a/src/classes/IntegrationWebServiceTest.cls
+++ b/src/classes/IntegrationWebServiceTest.cls
@@ -9,16 +9,20 @@ private class IntegrationWebServiceTest {
         }
         insert products;
     }
-    
-	@isTest
-    private static void insertTest() {        
+
+    private static void requestMethod(String json) {
         RestRequest request = new RestRequest();
         request.requestUri = '/services/apexrest/IntegrationWebService/';
         request.httpMethod = 'POST';
-        request.addHeader('Content-Type', 'application/json');        
-        String json = '[{"attributes":{"type":"Product2","url":"/services/data/v47.0/sobjects/Product2/01t2v00000Ci4mNAAR"},"Id":"01t2v00000Ci4mNAAR","Name":"Dada","IsDeleted":false,"LastModifiedDate":"2020-02-03T09:36:08.000+0000","CreatedDate":"2020-02-01T15:51:04.000+0000"}]';
+        request.addHeader('Content-Type', 'application/json');
         request.requestBody = Blob.valueOf(json);
         RestContext.request = request;
+    }
+    
+	@isTest
+    private static void insertTest() {
+        String json = '[{"attributes":{"type":"Product2","url":"/services/data/v47.0/sobjects/Product2/01t2v00000Ci4mNAAR"},"Id":"01t2v00000Ci4mNAAR","Name":"Dada","IsDeleted":false,"LastModifiedDate":"2020-02-03T09:36:08.000+0000","CreatedDate":"2020-02-01T15:51:04.000+0000"}]';
+        requestMethod(json);
         test.startTest();
         IntegrationWebService.getExternalData();
         test.stopTest();
@@ -27,15 +31,10 @@ private class IntegrationWebServiceTest {
     }
     
     @isTest
-    private static void updateTest() {        
-        RestRequest request = new RestRequest();
-        request.requestUri = '/services/apexrest/IntegrationWebService/';
-        request.httpMethod = 'POST';
-        request.addHeader('Content-Type', 'application/json');  
+    private static void updateTest() {
         Product2 existProduct = [SELECT Id, Name FROM Product2 WHERE Name='test1']; 
         String json = '[{"attributes":{"type":"Product2","url":"/services/data/v47.0/sobjects/Product2/'+existProduct.Id+'"},"Id":"'+existProduct.Id+'","Name":"Test123","IsDeleted":false,"LastModifiedDate":"2020-02-03T09:36:08.000+0000","CreatedDate":"2020-02-01T15:51:04.000+0000"}]';
-        request.requestBody = Blob.valueOf(json);
-        RestContext.request = request;
+        requestMethod(json);
         test.startTest();
         IntegrationWebService.getExternalData();
         test.stopTest();
@@ -44,36 +43,26 @@ private class IntegrationWebServiceTest {
     }
     
     @isTest
-    private static void deleteTest() {        
-        RestRequest request = new RestRequest();
-        request.requestUri = '/services/apexrest/IntegrationWebService/';
-        request.httpMethod = 'POST';
-        request.addHeader('Content-Type', 'application/json');  
-        Product2 existProduct = [SELECT Id, Name FROM Product2 WHERE Name='test2']; 
+    private static void deleteTest() {
+        Product2 existProduct = [SELECT Id, Name FROM Product2 WHERE Name='test2'];
+        test.startTest();
         String json = '[{"attributes":{"type":"Product2","url":"/services/data/v47.0/sobjects/Product2/'+existProduct.Id+'"},"Id":"'+existProduct.Id+'","Name":"'+existProduct.Name+'","IsDeleted":true,"LastModifiedDate":"2020-02-03T09:36:08.000+0000","CreatedDate":"2020-02-01T15:51:04.000+0000"}]';
-        request.requestBody = Blob.valueOf(json);
-        RestContext.request = request;
-        
+        requestMethod(json);
         IntegrationWebService.getExternalData();
-               
+        test.stopTest();
 		List<Product2> actual = new List<Product2>([SELECT id, Name FROM Product2 WHERE Name = 'test2' LIMIT 1]);
 		System.assertEquals(0, actual.size());       
     }
     
     @isTest
-    private static void undeleteTest() {        
-        RestRequest request = new RestRequest();
-        request.requestUri = '/services/apexrest/IntegrationWebService/';
-        request.httpMethod = 'POST';
-        request.addHeader('Content-Type', 'application/json');  
+    private static void undeleteTest() {
         Product2 existProduct = [SELECT Id, Name FROM Product2 WHERE Name='test3']; 
         delete existProduct;
         String json = '[{"attributes":{"type":"Product2","url":"/services/data/v47.0/sobjects/Product2/'+existProduct.Id+'"},"Id":"'+existProduct.Id+'","Name":"'+existProduct.Name+'","IsDeleted":false,"LastModifiedDate":"2020-02-03T09:36:08.000+0000","CreatedDate":"2020-02-01T15:51:04.000+0000"}]';
-        request.requestBody = Blob.valueOf(json);
-        RestContext.request = request;
-        
+        test.startTest();
+        requestMethod(json);
         IntegrationWebService.getExternalData();
-               
+        test.stopTest();
 		List<Product2> actual = new List<Product2>([SELECT id, Name FROM Product2 WHERE Name = 'test3' LIMIT 1]);
 		System.assertEquals('test3', actual[0].Name);       
     }
